Fixes the missing color issues on mix-colors mixin

--- a/packages/mix/color-samples.scss
+++ b/packages/mix/color-samples.scss
@@ -8,4 +8,5 @@
 
 .samp {
   @include mix-colors("color");
+  @include mix-colors("color.ui");
 }
